Name:                pico
Version:             0.5.0
Synopsis:            Minimal R5RS Scheme interpreter and REPL.
Description:         
  R5RS is an implementation of the R5RS standard.
  Implemented features include but are not limited to
  macros, the datatypes described in the standard and 
  a help function.
  .
  For detailed information on each release and a quick
  howto, see <https://github.com/hellerve/R5RS/README.md>.

License:             GPL
License-file:        LICENSE
Author:              Veit Heller <veitheller.de>
Maintainer:          Veit Heller <github.com/hellerve>
Bug-Reports:         http://github.com/hellerve/r5rs/issues
Build-Type:          Simple
Category:            Compilers/Interpreters, Language
Tested-with:         GHC == 7.8.4, GHC == 7.2.2

Extra-Source-Files:  README.md
                     LICENSE
Data-Files:          stdlib/*.scm
Cabal-Version:       >= 1.2 

Source-Repository head
    Type:            git
    Location:        git://github.com/hellerve/R5RS.git

Executable           r5rs
    Build-Depends:   base, haskeline, parsec, mtl, array, directory
    Extensions:      ExistentialQuantification
    ghc-options:     -Wall -Werror -O2
    Main-is:         Main.hs
    Hs-Source-Dirs:  src/
