Name:                zepto
Version:             0.8.0
Synopsis:            R5RS and beyond Interpreter and REPL.
Description:         
  zepto is a relaxed implementation of the R<sup>5</sup>RS standard.
  Implemented features include but are not limited to
  macros, continuations and the datatypes and libraries
  described in the standard.
  .
  For detailed information on each release and a quick
  howto, see <https://github.com/zepto-lang/zepto/README.md>.
  .
  For a more in-depth overview I suggest you take at
  the wiki, which can be found at
  <https://github.com/zepto-lang/zepto/wiki>.

License:             GPL
License-file:        LICENSE
Author:              Veit Heller <veitheller.de>
Maintainer:          Veit Heller <github.com/hellerve>
Bug-Reports:         http://github.com/zepto-lang/zepto/issues
Build-Type:          Simple
Category:            Compilers/Interpreters, Language
Tested-with:         GHC == 7.10.1,
                     GHC == 7.8.4,
                     GHC == 7.6.3,
                     GHC == 7.4.2

Extra-Source-Files:  README.md
                     LICENSE
Data-Files:          zepto-stdlib/*.zp
                     assets/*.as
Cabal-Version:       >= 1.2 

Source-Repository head
    Type:            git
    Location:        git://github.com/zepto-lang/zepto.git

Executable           zepto
    Build-Depends:   array,
                     base,
                     containers,
                     directory,
                     filepath,
                     haskeline,
                     hashable,
                     MissingH,
                     mtl >= 2.2.1,
                     parsec,
                     process,
                     random,
                     split,
                     time,
                     transformers >= 0.4.2,
                     unordered-containers
    Extensions:      ExistentialQuantification 
                     CPP
    ghc-options:     -Wall 
                     -Werror 
                     -O2
    Main-is:         Main.hs
    Hs-Source-Dirs:  src/
