Name:                zepto
Version:             0.9.6
Synopsis:            R5RS and beyond Interpreter and REPL.
Description:
  zepto is a relaxed implementation of the R<sup>5</sup>RS standard.
  Implemented features include but are not limited to
  macros, continuations and the datatypes and libraries
  described in the standard.
  .
  For detailed information on each release and a quick
  howto, see <https://github.com/zepto-lang/zepto/README.md>.
  .
  For a more in-depth overview I suggest you take at
  the wiki, which can be found at
  <https://github.com/zepto-lang/zepto/wiki>.

License:             GPL
License-file:        LICENSE
Author:              Veit Heller <veitheller.de>
Maintainer:          Veit Heller <github.com/hellerve>
Bug-Reports:         http://github.com/zepto-lang/zepto/issues
Build-Type:          Simple
Category:            Compilers/Interpreters, Language
Tested-with:         GHC == 8.0.1,
                     GHC == 7.10.1,
                     GHC == 7.8.4,
                     GHC == 7.6.3,
                     GHC == 7.4.2

Extra-Source-Files:  README.md
                     LICENSE
Data-Files:          zepto-stdlib/*.zp
                     zepto-stdlib/srfi/*.zp
                     zepto-stdlib/argparse/*.zp
                     zepto-stdlib/data/*.zp
                     zepto-stdlib/data/*.impl.zp
                     zepto-stdlib/datetime/*.zp
                     zepto-stdlib/bench/*.zp
                     zepto-stdlib/json/*.zp
                     zepto-stdlib/minitest/*.zp
                     zepto-stdlib/module/*.zp
                     zepto-stdlib/monads/*.zp
                     zepto-stdlib/querystring/*.zp
                     zepto-stdlib/parsecomb/*.zp
                     zepto-stdlib/rsa/*.zp
                     zepto-stdlib/slugify/*.zp
                     zepto-stdlib/statistics/*.zp
                     zepto/*.zp
                     zepto/compiler/*.zp
                     zepto/erl/*.zp
                     assets/*.as
Cabal-Version:       >= 1.2 

Source-Repository head
    Type:            git
    Location:        git://github.com/zepto-lang/zepto.git

Library
  Build-Depends:   array,
                   bytestring,
                   parsec
  Extensions:      ExistentialQuantification
  Hs-Source-Dirs:  src
  Exposed-Modules: Zepto.Types
                   Zepto.Types.Export

Executable           zepto
    Build-Depends:   array,
                     base >= 4.7.0.0,
                     binary,
                     bytestring >= 0.10.2.0,
                     clock,
                     containers,
                     cryptonite,
                     directory,
                     filepath,
                     ghc,
                     ghc-prim,
                     ghc-paths,
                     hashable,
                     hashmap,
                     MissingH,
                     mtl >= 2.2.1,
                     network,
                     parsec,
                     pcre-heavy,
                     pcre-light,
                     process,
                     transformers >= 0.4.2,
                     strict,
                     utf8-string
    Extensions:      ExistentialQuantification
                     CPP
    ghc-options:     -Wall
                     -O2
                     ---threaded
                     ---fprof-auto
                     ---prof
                     --"-with-rtsopts=-N -p -s -h -i0.1"
    Main-is:         Main.hs
    Hs-Source-Dirs:  src/
