Name:                zepto
Version:             0.9.7
Synopsis:            R5RS and beyond Interpreter and REPL.
Description:
  zepto is a relaxed implementation of the R<sup>5</sup>RS standard.
  Implemented features include but are not limited to
  macros, continuations and the datatypes and libraries
  described in the standard.
  .
  For detailed information on each release and a quick
  howto, see <https://github.com/zepto-lang/zepto/README.md>.
  .
  For a more in-depth overview I suggest you take at
  the wiki, which can be found at
  <https://github.com/zepto-lang/zepto/wiki>.

License:             GPL
License-file:        LICENSE
Author:              Veit Heller <veitheller.de>
Maintainer:          Veit Heller <github.com/hellerve>
Bug-Reports:         http://github.com/zepto-lang/zepto/issues
Build-Type:          Simple
Category:            Compilers/Interpreters, Language
Tested-with:         GHC == 8.0.1,
                     GHC == 8.0.0

Extra-Source-Files:  README.md
                     LICENSE
Data-Files:          stdlib/*.zp
                     stdlib/srfi/*.zp
                     stdlib/argparse/*.zp
                     stdlib/data/*.zp
                     stdlib/data/*.impl.zp
                     stdlib/datetime/*.zp
                     stdlib/bench/*.zp
                     stdlib/json/*.zp
                     stdlib/minitest/*.zp
                     stdlib/module/*.zp
                     stdlib/monads/*.zp
                     stdlib/querystring/*.zp
                     stdlib/parsecomb/*.zp
                     stdlib/rsa/*.zp
                     stdlib/slugify/*.zp
                     stdlib/statistics/*.zp
                     zepto/*.zp
                     zepto/compiler/*.zp
                     zepto/erl/*.zp
                     assets/*.as
Cabal-Version:       >= 1.2 

Source-Repository head
    Type:            git
    Location:        git://github.com/zepto-lang/zepto.git

Library
  Build-Depends:   array,
                   bytestring,
                   parsec
  Extensions:      ExistentialQuantification
  Hs-Source-Dirs:  src
  Exposed-Modules: Zepto.Types
                   Zepto.Types.Export

Executable           zepto
    Build-Depends:   array,
                     base >= 4.7.0.0,
                     binary,
                     bytestring >= 0.10.2.0,
                     clock,
                     containers,
                     cryptonite,
                     directory,
                     filepath,
                     ghc,
                     ghc-prim,
                     ghc-paths,
                     MissingH,
                     mtl >= 2.2.1,
                     network,
                     parsec,
                     pcre-heavy,
                     pcre-light,
                     process,
                     transformers >= 0.4.2,
                     strict,
                     utf8-string
    Extensions:      ExistentialQuantification
                     CPP
    ghc-options:     -Wall
                     -O2
                     ---threaded
                     ---fprof-auto
                     ---prof
                     --"-with-rtsopts=-N -p -s -h -i0.1"
    Main-is:         Main.hs
    Hs-Source-Dirs:  src/
